--- a/index.html
+++ b/index.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Radura</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Radura — A place to rest.</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <main>
-    <h1>Radura</h1>
-    <p>Qui ci va il testo principale del sito, fedele all’originale.</p>
-    <img src="images/leaf.png" alt="Foglia" />
+  <header class="hero">
+    <img src="path/to/hero-image.jpg" alt="Radura hero image" class="hero__img">
+    <div class="hero__overlay">
+      <h1 class="hero__title">A place to rest.</h1>
+    </div>
+  </header>
+  <main class="main">
+    <section class="contact">
+      <p><a href="mailto:info@radura.site">info@radura.site</a></p>
+      <p><a href="https://instagram.com/radura.site" target="_blank">@radura.site</a></p>
+    </section>
+    <footer class="footer">
+      <p>Image courtesy of Giuseppe De Santis.</p>
+    </footer>
   </main>
 </body>
 </html>
-
