--- a/index.html
+++ b/index.html
@@ -1,10 +1,4 @@
-</head>
-<body>
-  <main>
-    <h1>Radura</h1>
-    <p>Qui potrai aggiungere il contenuto del sito.</p>
-   
-  </main>
-</body>
-</html>
->>>>>>> Primo commit
+<link rel="stylesheet" href="style.css" />
+
+
+prova
