--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="style.css" />
-
+<title>radura</title>
+<link rel="icon" type="image/jpeg" href="favicon.png" />
 
 prova
