--- a/index.html
+++ b/index.html
@@ -1,5 +1,19 @@
-<link rel="stylesheet" href="style.css" />
-<title>radura</title>
-<link rel="icon" type="image/jpeg" href="favicon.png" />
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-prova
+  <title>radura</title>
+
+  <!-- Collegamento al CSS -->
+  <link rel="stylesheet" href="style.css" />
+
+  <!-- Favicon corretta (PNG da images/) -->
+  <link rel="icon" type="image/png" href="images/favicon.png" />
+</head>
+
+<body>
+  prova testo
+</body>
+</html>
