--- a/index.html
+++ b/index.html
@@ -3,17 +3,25 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
   <title>radura</title>
-
-  <!-- Collegamento al CSS -->
   <link rel="stylesheet" href="style.css" />
-
-  <!-- Favicon corretta (PNG da images/) -->
   <link rel="icon" type="image/png" href="images/favicon.png" />
 </head>
-
 <body>
-  prova testo
+  <div class="container">
+    <div class="left">
+      <img src="images/radura.jpg" alt="radura" />
+    </div>
+    <div class="right">
+      <div class="top-text">
+        <p class="line">A place to rest.</p>
+        <p class="line"><a href="mailto:info@radura.site">info@radura.site</a></p>
+        <p class="line"><a href="https://instagram.com/radura.site" target="_blank">instagram.com/radura.site</a></p>
+      </div>
+      <div class="bottom-text">
+        <p>Image courtesy of Giuseppe De Santis</p>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
