--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p class="line"><a href="https://instagram.com/radura.site" target="_blank">instagram.com/radura.site</a></p>
       </div>
       <div class="bottom-text">
-        <p>Image courtesy of Giuseppe De Santis</p>
+        <p>Image courtesy of Giuseppe De Santis.</p>
       </div>
     </div>
   </div>
