--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
     </div>
     <div class="right">
       <div class="top-text">
-        <p class="line">A place to rest.</p>
-		  <br> 
-        <p class="line"><a href="mailto:info@radura.site">info@radura.site</a></p>
-        <p class="line"><a href="https://instagram.com/radura.site" target="_blank">instagram.com/radura.site</a></p>
+        <p class="line">
+  A place to rest.
+			<br />
+			<br />
+  <a href="mailto:info@radura.site">info@radura.site</a><br />
+  <a href="https://instagram.com/radura.site" target="_blank">instagram.com/radura.site</a>
+</p>
       </div>
       <div class="bottom-text">
         <p>Image courtesy of Giuseppe De Santis.</p>
