--- a/index.html
+++ b/index.html
@@ -14,13 +14,11 @@
     </div>
     <div class="right">
       <div class="top-text">
-        <p class="line">
-  A place to rest.
-			<br />
-			<br />
+        <div class="line">
+  A place to rest.<br /><br />
   <a href="mailto:info@radura.site">info@radura.site</a><br />
   <a href="https://instagram.com/radura.site" target="_blank">instagram.com/radura.site</a>
-</p>
+</div>
       </div>
       <div class="bottom-text">
         <p>Image courtesy of Giuseppe De Santis.</p>
